create github pages

--- a/daniel-nolting.html
+++ b/daniel-nolting.html
@@ -26,7 +26,8 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
   
-  <meta name="author" content="Daniel Nölting">
+  <meta name="robots" content="index, follow">
+<meta name="author" content="Daniel Nölting">
 <script type='application/ld+json'> 
 {
   "@context": "http://www.schema.org",
@@ -108,7 +109,7 @@
 	
 </section>
 
-<header class="cid-10" id="10" data-rv-view="805">
+<header class="cid-10" id="10" data-rv-view="745">
     
     
     <!--  -->
@@ -210,7 +211,7 @@
                 </div>
                 <div data-form-type="formoid">
 
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="WOm8UBwbeY41lpKMMYUEJIFSmD5tAyiAphppEZfXQQ/jcEg3+VZepBpZpVjKDig8jSIXVbSwlrDO2d7Gc+yBl+f6KH7aDzNR/mMUdg8iWT7mobMEepYjRS28cNV7zttj.54HMGXn08ys6d1HMyNPrshORVSnTf/OXzogowVICutpKw7FJhHu9WvI2rly3z+hHJcHuNfATSH/Ozlp0t/DonbpIfksj9CTYbldAlf9tqaXbX9qCXKdFE1CUGTTtbhH5">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="4h5Mp96eImIpGzWKHX463tJftwYht3w4nyHItZ+4rNFRBHHcdOzPprW0/Ct07D/aVytaBipJZ2TUW80HoynmYaEhLuWoRXaBRwtinwNYyqfAb8ZVb4kGnLXW71qscBjg.G9mR/mDILvrypCCvoi+lzm42z7sb0yjgmQ/KSbF+bd7Q5wMeh9yoj3gRxcyz1UseUEJEu2dMw863godOqTFYDT8AdtgvqafwDZGHJw8sV7JAemkQugVFltmFjzLarVEl">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp.
