--- a/emprendedores.html
+++ b/emprendedores.html
@@ -26,7 +26,8 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
   
-  <meta name="author" content="Daniel Nölting">
+  <meta name="robots" content="index, follow">
+<meta name="author" content="Daniel Nölting">
 <script type='application/ld+json'> 
 {
   "@context": "http://www.schema.org",
@@ -107,7 +108,7 @@
 	
 </section>
 
-<header class="cid-rZlAnhAebo" id="header01-8r" data-rv-view="765">
+<header class="cid-rZlAnhAebo" id="header01-8r" data-rv-view="705">
     
     <div class="overlay"></div>
     <div class="container">
@@ -252,7 +253,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="pt6BR/thGBI4sLh07MvnbzqFXlLa5dpGbvkuHL3eVAMlpQ3NoQCMKzZwp6E6UsIjfV2zBBNIQ2KwLZPIRRVTS72+7bZEsRj/qaEXOulp9+TJnqRbGsdYZ6atmaLjHQdj.KEVX3xENjViiRxP68DHV/pkdlunH5lrAh0kZxBcDzX5q4E35uPgEaXvKWppvWiyu4Ia4ClkGdptnIK6Fy8yNNRT54Wl+UqPsEe18N5GRxCUSk+NxJ/VEJCImv2YZ2qn6">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="71ms+TPeUMwunt783Hm4PHzsxl9HF3WyiHGNd+WaYxzHvkAgSZCPKrEOunBQJaJ9A9M8nZsxzxDkxEtlnZ3G7STv2By3mN77u3P8PyOrBoHGfDDaFRkz5B8i2mVLrHwZ.4VqlX/R9PanAGdAIt0+fyb9BLYmH8B+nKOJWIxL+ZTCglJ05l/irbJaBnJ5Ckz1OmghuvTuwjclljLXCS9aScqWtFh/6YgM+LU5bk1m3FLaO4FdUtKmUUTAjborY8Sk=">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
