--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   
-  <meta name="robots" content="noindex, follow" />
+  <meta name="robots" content="index, follow" />
 <meta name="googlebot" content="noindex" />
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   </head>
@@ -116,7 +116,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="D7zWgXhwXi3GcFBq0LN9K9opy09AzxGxIhIV+jt4bi3pLWsM+5RpsZpAu/xHNm0SGy4rBPzjACWHqQtamYKR0gvzbZgJ+LEMBHjJ2O+Li0hJeRgBI/nQNaNk96Cnw4FT.HvnexFLY3VtpjHM2SWaO2gfHGhEi2yyYSYH+K5rnAfPDdjD2MEnNRFCJ/yg7F85MUD1a+QqtrunYebfPmXlguGwTcBJd3pc3jG0W+CB6tmhSLHxhagyeTMsi737DqNGe">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="xhFmJg4QkT193TaDL6ltVDMZgVUyJ5wYlk5bvoeK/9wk5t7Wn7faOWak9zlX1lfsxLY1kUcW/Jjhr2xIEDCBMXsLndcXex/Vc+fvp0kWXn/7kooCm8U2LlhczxvnVrLA.qSrKTw/jvuwNOAFGf0vPWUfNoMo3pfYrd4i+vmh8nnCnDMYMxGcdNWZ0dE8Gpi92rOrWB62FJJwxcxjuDK1eaJfXYgXz6+PGb79MsYAIGinPn7YjS1BbLCnlIamIqDnn">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
