--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
+  <link rel="preload" href="assets/images/web.webp" as="image">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-dani.png" type="image/x-icon">
   <meta name="description" content="20 años creando y optimizando páginas webs, que ayudan a emprendedores, profesionales y empresarios a alcanzar sus objetivos ✅.">
