--- a/analitica.html
+++ b/analitica.html
@@ -84,7 +84,7 @@
 		<div class="menu-container container">
 			<div class="navbar-brand">
 				
-				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="https://danielnolting.com"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
+				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="index.html"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				
@@ -382,7 +382,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="xAUtfMYMgV6ZSFE3YXjtpV4Q4rbM5Rx7EWUaVJc7xizBaT3u2GZR1QGSiuSube89Ibsi8H7AY/kGb0ZBZ1HlaYmHjjS99PZokqnlzeqXrnAmL08bCHOwHFcXKPez2pBi.7dm/azsBZvMQIkYnDI3HBl9yz+0XR2jwVRVrKcYboNGwcOhKZ4G2b4SOs14IjSiFObpGAQbZow2UrBohoPJv0lv3Cndg0R4VvswJ8RxqKqJJ3xAAe4ArygMJOn0npu4x">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="CF4qP/kvLC069l+GiWKV2MjnV2kvgzWSqQp02Qx+zpMBIuKcfLkD/DUKbxXqNT2nB/ib+TTUHoinoNmjh7Y/Dxn9YNVadnpdKK4mSak+XYjTSmkuo+idlsKbycmh3HaS.Pz7dSHbMwF3HcioxDZg30F2IKkfhaLtsGCTdc5Z8ShwhLHB/xj//PfShx9YsAX3vV8zdSxrE90lgQdTN/IwwAm9Klx0Gf1L3uVILRU6ZCCxft+XrFeWxrRS5fDv4nGGj">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
