--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
 		<div class="menu-container container">
 			<div class="navbar-brand">
 				
-				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="https://danielnolting.com"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
+				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="index.html"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				
@@ -116,7 +116,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="xhFmJg4QkT193TaDL6ltVDMZgVUyJ5wYlk5bvoeK/9wk5t7Wn7faOWak9zlX1lfsxLY1kUcW/Jjhr2xIEDCBMXsLndcXex/Vc+fvp0kWXn/7kooCm8U2LlhczxvnVrLA.qSrKTw/jvuwNOAFGf0vPWUfNoMo3pfYrd4i+vmh8nnCnDMYMxGcdNWZ0dE8Gpi92rOrWB62FJJwxcxjuDK1eaJfXYgXz6+PGb79MsYAIGinPn7YjS1BbLCnlIamIqDnn">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="X1K5c6NFxhFjEW3A495PXgVgb9vnFR5Bzz3XLS8DlI3u97EoacM4oW3gIFTYAPxrTIXTUT8rxT8Cc6wednsEX6t5xHmas65Er8+rwm6JAI+VV4P1EjPoWKEfzrPAEM+v.Gk96a0uHWnUIinGuL4FHWJMEQ4r76GSsreXVcdW8zADmz6qxKhyq1T1s9Uvq0a1Pfoa1iGUM9gZwINgDGdaqOPjwcrJqcesqPdDoK4nIFoZwiGaXF4+67LcbtKpoV9QE">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
