--- a/datos-legales.html
+++ b/datos-legales.html
@@ -72,7 +72,7 @@
 		<div class="menu-container container">
 			<div class="navbar-brand">
 				
-				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="https://danielnolting.com"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
+				<span class="shadow"><a class="navbar-caption bold text-black display-5" href="index.html"><span class="color-daniel">Daniel</span><span class="color-nolting">Nölting</span></a></span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				
