--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
- 
+  <link rel="preload" href="assets/images/web.webp" as="image">
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
 	
 	
