--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <link rel="preload" href="assets/images/web.webp" as="image">
+  <link rel="preload" as="script" href="v0.js">
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
 	
 	
