--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="preload" href="assets/images/web.webp" as="image">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self';">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-dani.png" type="image/x-icon">
