--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="preload" href="assets/images/web.webp" as="image">
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
+	
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';
+script-src 'report-sample' 'self' https://cdn.ampproject.org/v0.js;
+style-src 'report-sample' 'self';
+object-src 'none';
+base-uri 'self';
+connect-src 'self' https://cdn.ampproject.org https://www.googletagmanager.com;
+font-src 'self';
+frame-src 'self';
+img-src 'self' https://www.google-analytics.com;
+manifest-src 'self';
+media-src 'self';
+report-uri https://5eef531067c38df1c66b25f0.endpoint.csper.io/;
+worker-src 'none';">
+	
+	
+	
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-dani.png" type="image/x-icon">
   <meta name="description" content="20 años creando y optimizando páginas webs, que ayudan a emprendedores, profesionales y empresarios a alcanzar sus objetivos ✅.">
