create github pages

--- a/analitica.html
+++ b/analitica.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Mejoro tu página web detectando problemas, oportunidades y puntos de mejora, ¿Quieres convertir a usuarios en clientes y dejar de perder ventas?  te ayudo ✅">
   <meta name="amp-script-src" content="">
   
-  <title>Daniel Nölting | Analista WEB ¿Cómo mejorar tu web?</title>
+  <title>Analista WEB  ¿Cómo mejorar tu web?</title>
   
 <link rel="canonical" href="https://danielnolting.com/analitica.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -382,7 +382,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="duWZBr/N87HLVcUmAIdz4AslfIq3O3tGu4vziu5LUAb/dW6Isa7kF5AibmnQGabTxY3oOLZUtBwx2bUjhadDyZABoVl7kbWbqu0Z+AwixXFBhzcIy8KzSw4uQgYVjkeu.wiSOm6A4nrO/FOh+/Otnvu5EdcX4DBvFEewJQNBRQSDd618ynJyprojoSBYK9vtsokC1rK43HBV5Zm51SjRa1c5YDw5CCRMhQEqVMgFnTsktaM24fdovDwh8ehObJkaD">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="t2AVvLVv5dANJvK5XqtigkUpCBVLKmq6giURtOLQEXJBEBMjum4A+0aqxpDgB2RRQduO/T2x1EP52waFtgMz1lvjhBwhSfl/T9u0vR9KvHrpl6zoeazVpAgJg/+nQ22k.NqqVyPfmgRsUaPQb8kfN/kxyXEDonoAnmZxqunSiONNZekeP9a/qr9wbG6PS+6HgXeeC0of/NlNkJUI7inG6uKFW1lrnK6SSNBwYcWLcgcqLn4gIldqNIo8smto8xzmN">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
