--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="20 años creando y optimizando páginas webs, que ayudan a emprendedores, profesionales y empresarios a alcanzar sus objetivos ✅.">
   <meta name="amp-script-src" content="">
   
-  <title>Daniel Nölting | Diseñador WEB freelance · Analista WEB</title>
+  <title>Diseñador WEB freelance - WordPress</title>
   
 <link rel="canonical" href="https://danielnolting.com/">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -493,7 +493,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="76aHbvTvOrIAa8PZtrviw/uAONcjo/8nHYq4h8SDbJJFs0NGZt81lPvMMkvCNitcHJhjhHoa3grnnUoqFtuwAGRyrGm4hfyuPdkEaU6yQLq5ArDghd8wU3SOjSgJ8Y8y.6Nli3uVkU2o2N0XjXRYmnEcodXeBd8XexGV2Wz0vemLOccEQrZsrzh/SD7vbUJIbdQivngs7KjTmWgO9EnqyokLBvnejKiu7CMcHaIXwPw1idFKQlfjlsEH+/GlNqMVZ">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="ltHZ0SnR2e/1fXiyqiuduwXPjrbUbfkOp4vzcqctcjHMnqjjIThLRfYwV6Xw2OqbfANnXEVRQxWQ3Pa9FSwmTZpo/gCX84EhoinhVMj1cBIXvMv2QiHlApqHYueeHoIH.FTW5UtE8Ddn7r1PtaAbNVgIIl3qeSBOgUCtbnI+ORqqLMLv+GjNgwr2AEmK5GA5O9A2KZp2bhVnu6lMncESNp+/7h6rhN9bntA12RBXosAwQUWEqPas1W3+0kypOQCac">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
