--- a/daniel-nolting.html
+++ b/daniel-nolting.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="amp-script-src" content="">
   
-  <title>Daniel Nölting | Diseño WEB - Analítica WEB</title>
+  <title>Daniel Nölting - diseñador de págnas web y analista.</title>
   
 <link rel="canonical" href="https://danielnolting.com/daniel-nolting.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -109,7 +109,7 @@
 	
 </section>
 
-<header class="cid-10" id="10" data-rv-view="2639">
+<header class="cid-10" id="10" data-rv-view="593">
     
     
     <!--  -->
@@ -211,7 +211,7 @@
                 </div>
                 <div data-form-type="formoid">
 
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="Y8V928aKEBrKxQFuvYwQwMvTdw7SV2lXZs9Xm/O0harSRrPAfUfMVqEXQVYT802Xv7IeYR+r/fPglAstSHV/dHVtRFBrkY65kROFGGqWwCFCYYX7hcsQTXLtTUHEpGvo.nANB/W5qysQa3OiI7aVqNEz5rgyRoIbC5YXLjS/dQOd24BgzMWyWFd4JM27HsiG5qDAvZMNbdwnL24N3e9HsrIxRl2hy/qe4qFktZDmGFkhs4FdCw/VSy7sL+e+VfldL">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="rMBHN0yU2MlGqsi6P/eUFyxKTJQFqQBQsUdTv3KTeC6olXJ0WgAnbeaI6NH9aFNDSGDdU7PWW86x+C3xQJXjmuw+BV594o83pWxzmTGnMiku85llT+rRTtZHgS62jqEA.wGTTeGcZlsnXLfX7nFXnbGczjLYDbNF0/j0+aa6DOcQgFIUteeZRmeLh6jxSRBvS3HTzhGNxP2jciytzSRYGMprmJUSf0tsRYaCKs3B4LV4eHeY4uVR92K26JmR6lY6l">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp.
