--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-dani.png" type="image/x-icon">
-  <meta name="description" content="20 años creando y optimizando páginas webs, que ayudan a emprendedores, profesionales y empresarios a alcanzar sus objetivos ✅.">
+  <meta name="description" content="20 años creando y optimizando páginas webs, que ayudan a emprendedores, profesionales y empresarios a alcanzar sus objetivos.">
   <meta name="amp-script-src" content="">
   
   <title>Diseñador WEB freelance - WordPress</title>
@@ -493,7 +493,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="ltHZ0SnR2e/1fXiyqiuduwXPjrbUbfkOp4vzcqctcjHMnqjjIThLRfYwV6Xw2OqbfANnXEVRQxWQ3Pa9FSwmTZpo/gCX84EhoinhVMj1cBIXvMv2QiHlApqHYueeHoIH.FTW5UtE8Ddn7r1PtaAbNVgIIl3qeSBOgUCtbnI+ORqqLMLv+GjNgwr2AEmK5GA5O9A2KZp2bhVnu6lMncESNp+/7h6rhN9bntA12RBXosAwQUWEqPas1W3+0kypOQCac">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="ZxIJQRwRn02vfPHCkc29hai9r89SQEpu2mxyw6gxMTq+Dc5ByFEdlkS8Q1EV09wkQoC/ycc+hltnaRsZLU/zMwTCBtGdZyYPdQ4Nipjvpv7IG1D9exELZsGgmTfTwxyt.SvR6IesmwlVqRaHOj/LVxRjkxb5pcvx01+jNJCMG+0sjQrQT5CN/uChdinuEPqX267tbIWO6kesfYi3Fzr+kiUP+yt0AiWfJEmU4wxWfoLNIMvukhQaeu+CQE3yiTZeq">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
