--- a/emprendedores.html
+++ b/emprendedores.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-dani.png" type="image/x-icon">
-  <meta name="description" content="¿Necesitas una página web que resalte tus productos o servicios, sin que se te dispare el presupuesto? te explico como puedo ayudarte ✅.">
+  <meta name="description" content="¿Necesitas una página web que resalte tus productos o servicios, sin que se te dispare el presupuesto? te explico como puedo ayudarte.">
   <meta name="amp-script-src" content="">
   
-  <title>Diseño WEB  para Emprendedores</title>
+  <title>Emprendedores - Diseño WEB </title>
   
 <link rel="canonical" href="https://danielnolting.com/emprendedores.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -109,7 +109,7 @@
 	
 </section>
 
-<header class="cid-rZlAnhAebo" id="header01-8r" data-rv-view="553">
+<header class="cid-rZlAnhAebo" id="header01-8r" data-rv-view="955">
     
     
     <div class="container">
@@ -254,7 +254,7 @@
                 </div>
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="RwaLWQAdUnJuwYCbAdXN32IuFOyu2zlVOYZJ1af45XPAykvPEkylhswgYLLNpF4QtnLXwvcMNHeLiVERkushkM+18Vt3I+LNZtxFIlNVtpukbU1e82m8EdY/beEJBKNh.xiXpaIx+RHUf5tZhZAsIQ0UljbQ3ZOGn7KjmyqJFHsnr2FHm0EA5+xlPIIRQ1BGz4xuBr1D7gZ910BzdkJfbMZkk2w3wyJn+Xw8Hikkif1v/KBLptJ1T42R+4ox4HBeg">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="mZNkPW6z/6dR3U40Tbh9D5TsOB4NnjzihV07vuZJaM1XSbK8dzR9Dj23uSsByVHNp8kzZRwbzCs/H3foirCIuY3thL+t/bV7f5cYkGS6l8ZYe0nXBPwbt7fI+6mWaWka.pCZLrzAaTUmMtn5E0KpbhuN/fIjMvCC2wEW83rOHw5OYtZ8biBiX79Luu1h79HP48JRoU6weBxomZ+X4I7gAUuE3saWRg3hVwpNT/0w3tBfFr2Vy/891PRHWHNfuvq+j">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp. Te escribo en breve, gracias.</template>
