--- a/daniel-nolting.html
+++ b/daniel-nolting.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="amp-script-src" content="">
   
-  <title>Daniel Nölting - diseñador de págnas web y analista.</title>
+  <title>Daniel Nölting</title>
   
 <link rel="canonical" href="https://danielnolting.com/daniel-nolting.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -109,7 +109,7 @@
 	
 </section>
 
-<header class="cid-10" id="10" data-rv-view="995">
+<header class="cid-10" id="10" data-rv-view="1379">
     
     
     <!--  -->
@@ -211,7 +211,7 @@
                 </div>
                 <div data-form-type="formoid">
 
-<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="s68aRH0qxKTYJIei7v9tdsqgWUX2fVba1v2q+y1MhaXvanjZrGHe51qJsuVCpag6ChX1Y0+G2al+2BEX8ryC1a+k2ID2gEF4IASj1ek9IRRVH+SjBvuNsX2f6lfd4ObV.02gdMI+cjY3BBqF6MPXGfYzeceVQ1yGk7IYHVzJZa5dTs1Yacr7XOCj0CNaxb9XITXLoW0Nx7ElIHW4Y/QeEJFp/TqBY2YuyaTnkWiZcOV9vBYf1rRk2m1d+DPNJxASJ">
+<form method="POST" class="form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Nölting Form"><input type="hidden" name="email" data-form-email="true" value="xQBkIASbwJgVWL/3Z63AOelI3KOvDJI282VFE7HGKUDt8npNPmIh04v3zz9pC5TP/i/G5AyG/M0Xd2Yo1hGO6PJUfCcGtMQkzFd2gSifOiG2aBkC51uOl6AZHuI9XYfG.jMWQCOarhpCc+HCDFP88N+lu/45LXXQYiPNXpPBl0zWFcPT9jkM5fdX1VVN8d6sYplEIx3utUQSeTZtBDKGSgyJx2pghxAhs4nkMIqMCFW8N3mU7QJXHmUBq9xHuQ6yW">
 <div class="row">
 <div submit-success="" class="lgl mdl sml">
 <template data-form-alert="" type="amp-mustache">¡Hola! 😃 Intentaré contestar a tu e-mail entre hoy y mañana. Para temas urgentes contáctame por WhatsApp.
